Stop the letter g from being cut off
Not tested with y, I have no accounts with y in the name. It stops the
bottom of g from being cut off, at the very least.

--- a/sass/columns.scss
+++ b/sass/columns.scss
@@ -50,7 +50,7 @@
 	}
 	.column-title .attribution {
 	  display: block;
-	  line-height: 1em;
+	  line-height: 1.2em;
 	  margin-top: -3px;
 	}
 }
